# microLM

./: README.md  config.yaml  requirements.txt  setup.cfg  setup.py
examples/: chat_demo.py  data_preparation_demo.py  model_inspection_demo.py  text_generation_demo.py  training_demo.py
micro_lm/: config.py  dataset.py  inference.py  model.py  tokenizer.py  train.py  utils.py
models/: tokenizer.json
src/: chat.py  fine_tune.py  inference.py  training.py
tests/: test_dataset.py  test_inference.py  test_model.py  test_tokenizer.py  test_train.py
