[metadata]
name = micro-lm
version = 0.0.1
author = Cascade AI
description = A minimal Transformer-based language model framework.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    transformers
    datasets
    tokenizers
    matplotlib
    wandb
    tqdm

[options.packages.find]
where = .
include = micro_lm*
